--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.5
   introduction_screen: ^3.1.8
   shared_preferences: ^2.1.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
