--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   introduction_screen: ^3.1.8
   shared_preferences: ^2.1.1
   url_launcher: ^6.1.11
+  share_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
