--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.1.1
   url_launcher: ^6.1.11
   share_plus: ^7.0.0
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
